fixed pager last item spacing

--- a/modules/system/system.theme.css
+++ b/modules/system/system.theme.css
@@ -151,7 +151,6 @@ input.form-radio {
   background-image: none;
   display: inline;
   list-style-type: none;
-  padding: 0.5em;
 }
 .pager-current {
   font-weight: bold;
